--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 :root {
   --grey-bg: #fafafa;
+  --grey: #5f5f5f;
   --accent: #db6928;
   --white: #ffffff;
   --blue: #2885db;
@@ -22,7 +23,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 body header {
@@ -30,12 +31,14 @@ body header {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   gap: 4rem;
   margin-top: 2rem;
 }
 
 header button {
+  position: absolute;
+  left: 70%;
   background-color: var(--accent);
   color: var(--white);
   padding: 1.01rem 3.5rem;
@@ -58,6 +61,7 @@ header .search {
 .search input,
 input::placeholder {
   border: none;
+  color: var(--grey);
   background-color: var(--grey-bg);
   font-size: 1rem;
 }
@@ -66,7 +70,64 @@ input::placeholder {
 }
 
 .date h2 {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 2rem;
   text-align: center;
+}
+
+.main {
+  background-color: var(--blue);
+  width: 32rem;
+  height: 20rem;
+  border: none;
+  border-radius: 2.8rem;
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  padding: 2rem 3rem;
+}
+.main h3,
+h1,
+h4 {
+  font-weight: 500;
+}
+
+.main h3 {
+  font-size: 1.5rem;
+  margin-bottom: auto;
+}
+
+.main h1 {
+  font-size: 7rem;
+}
+
+.secondary {
+  width: 24rem;
+  height: 8rem;
+  padding: 0rem 3rem;
+  border: none;
+  border-radius: 2.8rem;
+  background-color: var(--grey-bg);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: start;
+}
+.block h3 {
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--grey);
+}
+.block h2 {
+  font-weight: 500;
+  font-size: 1.5rem;
 }
