--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 :root {
   --grey-bg: #fafafa;
   --grey: #5f5f5f;
@@ -11,7 +10,7 @@
 body * {
   padding: 0;
   margin: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -39,48 +38,77 @@ body header {
 header button {
   position: absolute;
   left: 70%;
+  width: 13.5rem;
+  text-align: start;
   background-color: var(--accent);
   color: var(--white);
   padding: 1.01rem 3.5rem;
   border: none;
   border-radius: 3rem;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1rem;
 }
 
+header button:hover {
+  cursor: pointer;
+  filter: brightness(1.2);
+}
+
 header .search {
-  width: 22rem;
   display: flex;
   align-items: center;
+  padding: 0.75rem 2.375rem;
   justify-content: space-between;
-  padding: 1.25rem 2.375rem;
   background-color: var(--grey-bg);
   border-radius: 3rem;
 }
 
-.search input,
-input::placeholder {
+.search:hover {
+  filter: brightness(0.97);
+}
+
+.search input {
+  width: 22rem;
   border: none;
-  color: var(--grey);
+  color: black;
   background-color: var(--grey-bg);
   font-size: 1rem;
+}
+
+input::placeholder {
+  color: var(--grey);
+}
+
+.search input:focus {
+  outline: none;
+}
+
+.search img {
+  background-color: var(--grey-bg);
+  padding: 0.5rem;
+  border-radius: 100%;
+}
+
+.search img:hover {
+  cursor: pointer;
+  filter: brightness(1.05);
 }
 
 .date {
 }
 
 .date h2 {
-  font-weight: 400;
+  font-weight: 500;
   font-size: 2rem;
   text-align: center;
 }
 
 .main {
   background-color: var(--blue);
-  width: 32rem;
-  height: 20rem;
+  width: 24rem;
+  height: 14rem;
   border: none;
-  border-radius: 2.8rem;
+  border-radius: 1.8rem;
   color: var(--white);
   display: flex;
   flex-direction: column;
@@ -91,24 +119,25 @@ input::placeholder {
 .main h3,
 h1,
 h4 {
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .main h3 {
   font-size: 1.5rem;
+  font-weight: 700;
   margin-bottom: auto;
 }
 
 .main h1 {
-  font-size: 7rem;
+  font-size: 5rem;
 }
 
 .secondary {
-  width: 24rem;
+  width: 28rem;
   height: 8rem;
   padding: 0rem 3rem;
   border: none;
-  border-radius: 2.8rem;
+  border-radius: 1.8rem;
   background-color: var(--grey-bg);
   display: flex;
   align-items: center;
@@ -116,6 +145,7 @@ h4 {
 }
 
 .block {
+  width: 12rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
